--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
             <div>
                 <button class="button" id="startGame">Start Game</button>
                 <button class="button" id="selectTime">Select Time</button>
-                <button class="button" id="contact">Contact</button>
+                <a href="mailto://nothinggoingtohappenhere@gmail.com">
+                <button class="button" id="contact">Contact</button></a>
             </div>
             <div id="selectedTime" class="timer">Time: 60s</div>
         </div>
@@ -168,8 +169,8 @@
         <!-- Time Modal -->
         <div class="time-modal" id="timeModal">
             <button class="button" data-time="60">1 Minute</button>
-            <button class="button" data-time="120">2 Minutes</button>
-            <button class="button" data-time="180">3 Minutes</button>
+            <button class="button" data-time="120">2 Minute</button>
+            <button class="button" data-time="180">3 Minute</button>
         </div>
 
         <!-- Game Over Modal -->
